--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,11 +22,14 @@
 <body id="page-top">
 
   <!-- Nav Bar Start-->
+  <nav class="navbar navbar-light bg-light">
+  <span class="navbar-brand mb-0 h1">Navbar</span>
+</nav>
 
 <header><h1>Mac Scaper</h1></header>
 
-<button type="button">SCRAPE!</button>
-<button type="buton">Clear Out!</button>
+<button type="button" id="scrapeBtn">SCRAPE!</button>
+<button type="buton" id="clearBtn">Clear Out!</button>
 
 
   {{{body}}}
